ingress/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: de-app1
spec:
  replicas: 1
  selector:
    matchLabels:
     app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
        - name: httpd
          image: httpd:latest
