ingress/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: de-app2
spec:
  replicas: 1
  selector:
    matchLabels:
     app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
        - name: nginx
          image: nginx:latest
