ingress/serv-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: web1
