ingress/serv-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: web2
